<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/confirm_otp_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/enter_your_otp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/bold_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

    <EditText
        android:id="@+id/et_readotp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:inputType="number"
        android:textSize="@dimen/bold_size"
        android:hint="@string/enter_otp_here"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <LinearLayout
        android:id="@+id/ll_otp"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/waiting_1_sec"
            android:textSize="@dimen/text_size"
            android:textColor="@android:color/white" />

        <ProgressBar
            android:id="@+id/progresstimer"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_confirm_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:text="@string/verify"
        android:textSize="@dimen/bold_size"
        android:textColor="@color/colorPrimary"
        android:padding="@dimen/activity_horizontal_margin" />

</RelativeLayout>