<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titletv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fifty"
        android:gravity="center"
        android:text="@string/enter_your_details"
        android:textColor="@android:color/white"
        android:textSize="@dimen/bold_size" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titletv"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/ten"
        android:layout_marginLeft="@dimen/ten"
        android:layout_marginRight="@dimen/ten"
        android:layout_marginStart="@dimen/ten"
        android:layout_marginTop="@dimen/thirty">

        <LinearLayout
            android:id="@+id/edit_username_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

                <EditText
                    android:id="@+id/etusername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_username"
                    android:inputType="text"
                    android:maxLength="30"
                    android:padding="10dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textSize="@dimen/text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_username_wrapper"
            android:layout_margin="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_email_address"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:padding="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="20sp"
                android:visibility="gone" />

        </LinearLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/proceedbtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/fifty"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rounded_button_background"
        android:text="@string/proceed"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/bold_size" />
</RelativeLayout>